<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="@string/tituloAdministracion">
        <menu>
            <item android:id="@+id/nav_home"
                android:icon="@drawable/anuncios"
                android:title="@string/titulomenuCartera" />

            <item android:id="@+id/nav_gallery"
                android:icon="@drawable/calendario"
                android:title="@string/titulomenuCalendario" />

            <item android:id="@+id/nav_item_mai"
                android:icon="@drawable/votacion"
                android:title="@string/titulomenuJuntas" />
        </menu>

    </item>
    <item android:title="@string/cuenta_de_usuario">
        <menu>
            <item android:id="@+id/nav_usuarioPreferencias"
                android:title="@string/userPreferencias"
                android:icon="@drawable/preferencias"/>
            <item
                android:id="@+id/nav_usuario"
                android:icon="@drawable/logout"
                android:title="@string/cerrarSesion" />
        </menu>

    </item>

</menu>